# Arcademia-Raylib-Template-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/: console.hpp  game_resources.hpp  inspector.hpp  keybinds.hpp  scene.hpp  scene_manager.hpp
include/engine/: game_renderer.hpp  raylib_extensions.hpp
include/engine/input/: action_map.hpp  arcademia_keybinds.hpp  controller_connect_scene.hpp  input_manager.hpp
resources/shaders/: blur.fs
src/: main.cpp  scene_manager.cpp
src/engine/: console.cpp  game_renderer.cpp  game_resources.cpp  inspector.cpp  raylib_extensions.cpp
src/engine/input/: action_debug_scene.cpp  action_map.cpp  controller_connect_scene.cpp  input_mananger.cpp
src/scenes/: main_menu.cpp  play_scene.cpp
web/: shell.html
